--- a/BSPracaInzynierska/Client/_Imports.razor
+++ b/BSPracaInzynierska/Client/_Imports.razor
@@ -13,6 +13,7 @@
 @using BSPracaInzynierska.Client.Services.BlindGuessGameService
 @using BSPracaInzynierska.Client.Services.GameCreatorService
 @using BSPracaInzynierska.Client.Services.MultiplayerService
+@using BSPracaInzynierska.Client.Services.ProfileServices
 @using BSPracaInzynierska.Client.Shared
 @using BSPracaInzynierska.Shared
 @using Microsoft.AspNetCore.Components.Authorization
