--- a/BSPracaInzynierska/Client/Pages/GameCreator.razor
+++ b/BSPracaInzynierska/Client/Pages/GameCreator.razor
@@ -10,6 +10,15 @@
         @gameCreator.playlist.Description
     </h5>
     <br />
+    @if (isFav == false)
+    {
+        <button class="btn btn-primary btn-lg" @onclick="AddToFav" type="button">Add to favourites</button>
+    }else{
+        <button class="btn btn-danger btn-lg" @onclick="RemoveFromFav" type="button">Remove from favourites</button>
+    }
+    
+    <br />
+    <br />
     <br />
     <h4 class="font-weight-bold">Select you game mode:</h4>
     <select @onchange="(e) => ChangeGameType(e.Value)">
@@ -18,8 +27,6 @@
         <option value="multiGame">Multiplayer</option>
     </select>
     <br />
-    <br />
-    <button class="btn btn-success btn-lg" @onclick="Play" type="button">Play</button>
     <br />
     <br />
 
@@ -31,6 +38,7 @@
                 <h2>Blind Guess Game</h2>
             </div>
             <div class="card-body">
+
                 <h4>What do you want to guess?</h4>
                 <select @onchange="(e) => ChangeGuessType(e.Value)">
                     <option value="Author">Author</option>
@@ -43,8 +51,35 @@
                 <p class="text-danger">@errorMessSong</p>
                 <h4>Duration of the game?</h4>
                 <input Min=@gameCreator.songs.Count() style="width: 15%;" type="number" @bind-value="gameDuration" class="form-control" placeholder="time" aria-label="time" aria-describedby="basic-addon2">
+                <br />
+                <br />
+                <h4>LeaderBoard</h4>
+                <table class="table  table-striped" style="width: 50%">
+                    <thead>
+                        <tr class="table-warning">
+                            <th scope="col">#</th>
+                            <th scope="col">Username</th>
+                            <th scope="col">Points</th>
+                        </tr>
+                    </thead>
+                    @foreach (var result in gameCreator.blindGuessLeaderBoard)
+                    {
+                        <tbody>
+                            <tr>
+
+                                <th scope="row">@(gameCreator.blindGuessLeaderBoard.FindIndex(i => i.Id == result.Id) + 1)</th>
+                                <td>@result.Player.Username</td>
+                                <td>@result.Points</td>
+                            </tr>
+                        </tbody>
+                    }
+                </table>
+
             </div>
-            <div class="card-footer">Footer</div>
+            <div class="card-footer">
+                <button class="btn btn-success btn-lg" @onclick="Play" type="button">Play custom game</button>
+                <button class="btn btn-primary btn-lg" @onclick="PlayRanked" type="button">Play ranked game</button>
+            </div>
         </div>
     }
     else if (gameType == "lightingRounds")
@@ -54,20 +89,40 @@
                 <h2>Lighting Rounds</h2>
             </div>
             <div class="card-body">
-                <h4>End the round when time runs out?</h4>
-                <select @onchange="(e) => ChangeGuessType(e.Value)">
-                    <option value="F">False</option>
-                    <option value="T" selected>True</option>
-                </select>
-                <br />
-                <br />
                 <h4>How many songs?</h4>
                 <input min=1 max=@gameCreator.songs.Count() style="width: 15%;" type="number" @bind-value="songToGuess" class="form-control" placeholder="time" aria-label="time" aria-describedby="basic-addon2">
                 <p class="text-danger">@errorMessSong</p>
                 <h4>Duration of one round?</h4>
                 <input Min=1 max=10 style="width: 15%;" type="number" @bind-value="gameDuration" class="form-control" placeholder="time" aria-label="time" aria-describedby="basic-addon2">
+                <br />
+                <h4>LeaderBoard</h4>
+                <table class="table  table-striped" style="width: 50%">
+                    <thead>
+                        <tr class="table-warning">
+                            <th scope="col">#</th>
+                            <th scope="col">Username</th>
+                            <th scope="col">Points</th>
+                        </tr>
+                    </thead>
+                    @foreach (var result in gameCreator.lightningRoundLeaderBoard)
+                    {
+                        <tbody>
+                            <tr>
+
+                                <th scope="row">@(gameCreator.lightningRoundLeaderBoard.FindIndex(i => i.Id == result.Id) + 1)</th>
+                                <td>@result.Player.Username</td>
+                                <td>@result.Points</td>
+                            </tr>
+                        </tbody>
+                    }
+                </table>
+
+
             </div>
-            <div class="card-footer">Footer</div>
+            <div class="card-footer">
+                <button class="btn btn-success btn-lg" @onclick="Play" type="button">Play custom game</button>
+                <button class="btn btn-primary btn-lg" @onclick="PlayRanked" type="button">Play ranked game</button>
+            </div>
         </div>
 
     }
@@ -91,7 +146,9 @@
                 <h4>Duration of one round?</h4>
                 <input Min=1 max=10 style="width: 15%;" type="number" @bind-value="gameDuration" class="form-control" placeholder="time" aria-label="time" aria-describedby="basic-addon2">
             </div>
-            <div class="card-footer">Footer</div>
+            <div class="card-footer">
+                <button class="btn btn-success btn-lg" @onclick="Play" type="button">Play with friends</button>
+            </div>
         </div>
 
     }
@@ -137,6 +194,7 @@
     private string? errorMessSong { get; set; }
     private string? gameType { get; set; } = "blindGuess";
     private Guid currentUserId = Guid.Empty;
+    private bool isFav = false;
 
     protected override async Task OnParametersSetAsync()
     {
@@ -144,6 +202,7 @@
         var user = authState.User;
         currentUserId = new Guid(user.FindFirst(c => c.Type.Contains("nameidentifier"))?.Value);
         await gameCreator.GetSongs(new Guid(Id));
+        isFav = await gameCreator.CheckFavourites(new Guid(Id), currentUserId);
         songToGuess = gameCreator.songs.Count();
         gameGuess = "Title";
     }
@@ -168,17 +227,31 @@
         StateHasChanged();
     }
 
+    async Task AddToFav()
+    {
+        await gameCreator.AddToFavourites(currentUserId);
+        isFav = true;
+        await InvokeAsync(() => StateHasChanged());
+    }
+
+    async Task RemoveFromFav()
+    {
+        await gameCreator.RemoveFromFavourites(currentUserId);
+        isFav = false;
+        await InvokeAsync(() => StateHasChanged());
+    }
+
     async Task Play()
     {
         if (songToGuess <= gameCreator.songs.Count() && songToGuess >= 0)
         {
             if (gameType == "blindGuess")
             {
-                navigationManager.NavigateTo($"{gameType}/{Id}/{gameGuess}/{gameDuration.ToString()}/{songToGuess.ToString()}");
+                navigationManager.NavigateTo($"{gameType}/{Id}/{gameDuration.ToString()}/{songToGuess.ToString()}");
             }
             else if (gameType == "lightingRounds")
             {
-                navigationManager.NavigateTo($"{gameType}/{Id}/{gameGuess}/{gameDuration.ToString()}/{songToGuess.ToString()}");
+                navigationManager.NavigateTo($"{gameType}/{Id}/{gameDuration.ToString()}/{songToGuess.ToString()}");
             }
             else if (gameType == "multiGame")
             {
@@ -188,5 +261,17 @@
         }
         else
             errorMessSong = "Wrong number of songs";
+    }
+
+    async Task PlayRanked()
+    {
+        if (gameType == "blindGuess")
+        {
+            navigationManager.NavigateTo($"{gameType}/rankedGame/{Id}");
+        }
+        else if (gameType == "lightingRounds")
+        {
+            navigationManager.NavigateTo($"{gameType}/rankedGame/{Id}");
+        }
     }
 }
