--- a/BSPracaInzynierska/Client/Pages/Login.razor
+++ b/BSPracaInzynierska/Client/Pages/Login.razor
@@ -3,19 +3,25 @@
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
 @inject ILoginService loginService
 
-<h3>Login</h3>
 
-<div class="col-6">
-    <input type="text" @bind-value="@userName" class="form-control" placeholder="Username" />
+<div class="container mx-auto">
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6">
+            <h3 class="text-center">Login</h3>
+            <br />
+            <input type="text" @bind-value="@userName" class="form-control" placeholder="Username" />
+            <br />
+            <input type="password" @bind-value="@userPassword" class="form-control" placeholder="Password" />
+            <br />
+            <button class="btn btn-primary" @onclick="LoginUser">Login</button>
+            <br />
+            <p>Don't have account? <a href="" @onclick="SignUp" class="link-primary">Sign up for free</a></p>
+        </div>
+        <div class="col-3"></div>
+    </div>
 </div>
-<br/>
-<div class="col-6">
-    <input type="password" @bind-value="@userPassword" class="form-control" placeholder="Password" />
-</div>
-<br />
-<div class="col-6">
-    <button class="btn btn-primary" @onclick="LoginUser">Login</button>
-</div>
+
 
 
 
@@ -47,6 +53,11 @@
         {
             navigationManager.NavigateTo("/login", true);
         }
+    }
+
+    public void SignUp()
+    {
+        navigationManager.NavigateTo("/register");
     }
 
 
