--- a/BSPracaInzynierska/Client/Pages/Register.razor
+++ b/BSPracaInzynierska/Client/Pages/Register.razor
@@ -2,22 +2,24 @@
 @inject ILoginService loginService
 @inject NavigationManager navigationManager
 
-<h3>Register</h3>
 
-<div class="col-6">
-    <input type="text" @bind-value="@userName" class="form-control" placeholder="Username" />
-</div>
-<br />
-<div class="col-6">
-    <input type="text" @bind-value="@userEmail" class="form-control" placeholder="Email" />
-</div>
-<br />
-<div class="col-6">
-    <input type="password" @bind-value="@userPassword" class="form-control" placeholder="Password" />
-</div>
-<br />
-<div class="col-6">
-    <button class="btn btn-primary" @onclick="LoginUser">Login</button>
+
+<div class="container mx-auto">
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6">
+            <h3 class="text-center">Register</h3>
+            <br />
+            <input type="text" @bind-value="@userName" class="form-control" placeholder="Username" />
+            <br />
+            <input type="text" @bind-value="@userEmail" class="form-control" placeholder="Email" />
+            <br />
+            <input type="password" @bind-value="@userPassword" class="form-control" placeholder="Password" />
+            <br />
+            <button class="btn btn-primary" @onclick="RegisterUser">Login</button>
+        </div>
+        <div class="col-3"></div>
+    </div>
 </div>
 
 
@@ -39,7 +41,7 @@
         }
     }
 
-    public async Task LoginUser()
+    public async Task RegisterUser()
     {
         await loginService.Register(userName, userPassword);
         navigationManager.NavigateTo("/login", true);
