--- a/BSPracaInzynierska/Client/Shared/NavMenu.razor
+++ b/BSPracaInzynierska/Client/Shared/NavMenu.razor
@@ -9,26 +9,11 @@
         <div class="navbar-header">
             <ul class="nav navbar-nav">
                 <li>
-                    <NavLink class="nav-link" href="mainpage">
-                        <a class="navbar-brand">Guess that Melody?</a>
-                    </NavLink>
-                </li>
-                <li>
-                    <NavLink class="nav-link" href="register">
-                        <span class="oi oi-home" aria-hidden="true"></span> Register
-                    </NavLink>
-                </li>
-                <li>
-                    <NavLink class="nav-link" href="login">
-                        <span class="oi oi-home" aria-hidden="true"></span> Login
+                    <NavLink class="nav-link" href="">
+                        <a class="navbar-brand">What's that Melody?</a>
                     </NavLink>
                 </li>
                 <AuthorizeView>
-                    <li>
-                        <NavLink class="nav-link" href="">
-                            <span class="oi oi-home" aria-hidden="true"></span> Home
-                        </NavLink>
-                    </li>
                     <li>
                         <NavLink class="nav-link" href="profile">
                             <span class="oi oi-plus" aria-hidden="true"></span> @currentUserName
